<resources>
    <string name="app_name">PetWorld</string>
    <string name="userEmailId">Email Id</string>
    <string name="userPassword">User Password</string>
    <string name="signUpLink">SignUp</string>
    <string name="userLogin">LogIn</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="location">Location</string>
    <string name="phone">PhoneNumber</string>
    <string name="locationPrompt">Use my current location</string>
    <string name="registerUser">Register Me!</string>
    <string name="owner">Owner</string>
    <string name="sitter">Sitter</string>
    <string name="dp_dateFormat" translatable="false">EE, dd MMM yyyy</string>
    <string name="dp_select_dates_msg">Please select the start and end dates</string>
    <string name="dateFormat" translatable="false">ddMMyyyy</string>
    <string name="booking_success">Successfully Booked!</string>
    <string name="register_enter_missing_values">Enter missing values</string>
    <string name="register_owner_added">Added you as an Owner</string>
    <string name="register_owner_present">You already have an account</string>
    <string name="register_sitter_added">Added you as a sitter</string>
    <string name="register_sitter_present">You already have an account</string>
    <string name="search">Search</string>
    <string name="search_text">Search Text</string>
    <string name="sort_by">Sort By:</string>
    <string name="no_results_found">No Results Found!</string>
    <string name="user_display_image">User Display Image</string>
    <string name="dollarSign">$</string>
    <string name="login_missing_values">Enter missing values</string>
    <string name="user_absent">User doesn\'t exist or emailID,password field is empty</string>
    <string name="enter_location">Enter Location</string>
    <string name="search_location">Search Location</string>
    <string name="search_by_name">Search By Name</string>
    <string name="updateProfile">Update Profile</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">UserName</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="new_appointment_created">New Appointment Created!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="to">-</string>
    <string name="woof">Woof!</string>
    <string name="payPerDay">Pay Per Day</string>
    <string name="errMsg1">Please fill out all the details!</string>
</resources>
