<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk4"
    android:orientation="vertical"
    android:padding="@dimen/activity_default_padding"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="@dimen/text_view_header1_size" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:autofillHints="@string/firstName"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:autofillHints="@string/lastName"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/et_register_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:autofillHints="@string/userEmailId"
        android:ems="10"
        android:hint="@string/userEmailId"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:autofillHints="@string/userPassword"
        android:ems="10"
        android:hint="@string/userPassword"
        android:inputType="textPassword" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/owner"
            tools:ignore="OnClick" />

        <RadioButton
            android:id="@+id/rb_sitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/sitter" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_pay_per_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:autofillHints="@string/payPerDay"
        android:ems="10"
        android:hint="@string/payPerDay"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:autofillHints="@string/phone"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" />

    <TextView
        android:id="@+id/tv_current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:autofillHints="@string/location"
        android:ems="10"
        android:hint="@string/location"
        android:textSize="@dimen/text_view_default_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:onClick="onSearchButtonClick"
        android:text="@string/search" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:onClick="onUseMyLocationButtonClick"
        android:text="@string/locationPrompt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onRegisterButtonClick"
        android:text="@string/registerUser" />
</LinearLayout>