<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk4"
    android:orientation="vertical"
    android:padding="@dimen/activity_default_padding"
    tools:context="com.ateam.petworld.activities.Profile">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/personal_profile"
        android:textAlignment="center"
        android:textSize="@dimen/text_view_header1_size" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="First Name"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Last Name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_pay_per_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Pay Per Day"
        android:ems="10"
        android:hint="@string/payPerDay"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveProfileChanges"
        android:text="@string/save_changes" />


</LinearLayout>
