<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk4"
    android:orientation="vertical"
    android:padding="@dimen/activity_default_padding"
    tools:context=".activities.SearchLocation">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_location"
        android:textAlignment="center"
        android:textSize="@dimen/text_view_header1_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Location Search Text"
            android:ems="10"
            android:hint="@string/enter_location"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/ib_search"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-55dp"
            android:layout_marginTop="-2dp"
            android:contentDescription="@string/search_by_name"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_search" />

        <Spinner
            android:id="@+id/spn_country_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_result_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_results_found"
        android:textSize="@dimen/text_view_default_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_location_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
