<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk4"
    android:orientation="vertical"
    android:padding="@dimen/activity_default_padding"
    tools:context=".activities.OwnerDashboard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:text="@string/woof"
        android:textAlignment="center"
        android:textSize="@dimen/text_view_header1_size" />

    <LinearLayout
        style="@style/Widget.AppCompat.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_default_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bookAppointmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bookAppointment" />

        <Button
            android:id="@+id/updateProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/updateProfile" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_owner_appointment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>