<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk4"
    android:orientation="vertical"
    android:padding="@dimen/activity_default_padding"
    tools:context="com.ateam.petworld.activities.SearchSitters">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textAlignment="center"
        android:textSize="@dimen/text_view_header1_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/element_default_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_search_sitter_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Search By Name"
                android:drawableEnd="@drawable/ic_search"
                android:hint="@string/search_text"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by"
                    android:textSize="@dimen/text_view_default_size" />

                <Spinner
                    android:id="@+id/spn_sort_by_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginVertical="@dimen/element_default_margin"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_no_result_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_results_found"
            android:textSize="@dimen/text_view_default_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sitter_search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
